GitHuB CI tweak. cabal v2-install doesn't respect --bindir?

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -31,11 +31,11 @@ jobs:
       run: |
           export PATH=/opt/cabal/bin:/opt/ghc/bin:$PATH
           mkdir -p ./bin
-          cabal v2-install --bindir=./bin exe:pandoc
+          cabal v2-install exe:pandoc
     - uses: actions/upload-artifact@master
       with:
         name: pandoc-linux
-        path: ./bin/pandoc
+        path: $HOME/.cabal/bin/pandoc
 
   windows:
 
