--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
           export PATH=/opt/cabal/bin:/opt/ghc/bin:$PATH
           mkdir -p ./artifacts
-          for f in $(find dist-newstyle -name 'pandoc*' -type f -perm +400); do cp $f ./artifacts/; done
+          for f in $(find dist-newstyle -name 'pandoc*' -type f -executable); do cp $f ./artifacts/; done
     - uses: actions/upload-artifact@master
       with:
         name: pandoc-linux
