GitHub CI - trigger build on workflow/haskell.yml change.

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -4,6 +4,7 @@ on:
     push:
         paths:
         - '*'
+        - '.github/workflows/haskell.yml'
         - '!MANUAL.txt'
         - '!/doc/*'
         - '!/tools/*'
