GitHub CI - use cabal 3 with ghc 8.8.

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -36,13 +36,24 @@ jobs:
         - 8.4.4
         - 8.6.5
         - 8.8.1
+        include:
+        - ghcversion: 8.0.2
+          cabalversion: 2.4
+        - ghcversion: 8.2.2
+          cabalversion: 2.4
+        - ghcversion: 8.4.4
+          cabalversion: 2.4
+        - ghcversion: 8.6.5
+          cabalversion: 2.4
+        - ghcversion: 8.8.1
+          cabalversion: 3.0
     steps:
     - uses: actions/checkout@v1
     - name: Install recent cabal/ghc
       run: |
           sudo add-apt-repository ppa:hvr/ghc
           sudo apt-get update
-          sudo apt-get install ghc-${{ matrix.ghcversion }} cabal-install-2.4
+          sudo apt-get install ghc-${{ matrix.ghcversion }} cabal-install-${{ matrix.cabalversion }}
     - name: Install dependencies
       run: |
           export PATH=/opt/cabal/bin:/opt/ghc/bin:$PATH
