--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -31,22 +31,22 @@ jobs:
     strategy:
       matrix:
         ghcversion:
-        - 8.0.2
-        - 8.2.2
-        - 8.4.4
-        - 8.6.5
-        - 8.8.1
+        - '8.0.2'
+        - '8.2.2'
+        - '8.4.4'
+        - '8.6.5'
+        - '8.8.1'
         include:
-        - ghcversion: 8.0.2
-          cabalversion: 2.4
-        - ghcversion: 8.2.2
-          cabalversion: 2.4
-        - ghcversion: 8.4.4
-          cabalversion: 2.4
-        - ghcversion: 8.6.5
-          cabalversion: 2.4
-        - ghcversion: 8.8.1
-          cabalversion: 3.0
+        - ghcversion: '8.0.2'
+          cabalversion: '2.4'
+        - ghcversion: '8.2.2'
+          cabalversion: '2.4'
+        - ghcversion: '8.4.4'
+          cabalversion: '2.4'
+        - ghcversion: '8.6.5'
+          cabalversion: '2.4'
+        - ghcversion: '8.8.1'
+          cabalversion: '3.0'
     steps:
     - uses: actions/checkout@v1
     - name: Install recent cabal/ghc
