--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -33,8 +33,8 @@ jobs:
           tar cvzf nightly-linux.tgz ${ARTIFACTS}
     - uses: actions/upload-artifact@master
       with:
-        name: nightly-linux-x86_64
-        path: nightly-linux-x86_64.tgz
+        name: nightly-linux
+        path: nightly-linux.tgz
 
   windows:
 
