Nightly - more windows tweaks.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -63,10 +63,11 @@ jobs:
           mkdir %ARTIFACTS%
           stack build pandoc pandoc-citeproc
           forfiles /P .\.stack-work\install /M pandoc*.exe /S /C "cmd /C copy @path %ARTIFACTS%"
-          ren %ARTIFACTS%\pandoc %ARTIFACTS%\pandoc-%SUFFIX%
-          ren %ARTIFACTS%\pandoc-citeproc %ARTIFACTS%\pandoc-citeproc-%SUFFIX%
-          copy COPYRIGHT %ARTIFACTS%\COPYRIGHT.txt
-          echo "Built from ${GITHUB_SHA}" > ${ARTIFACTS}\README.nightly.txt
+          copy COPYRIGHT %ARTIFACTS%
+          ren %ARTIFACTS%\pandoc pandoc-%SUFFIX%
+          ren %ARTIFACTS%\pandoc-citeproc pandoc-citeproc-%SUFFIX%
+          ren %ARTIFACTS%\COPYRIGHT COPYRIGHT.txt
+          echo "Built from %GITHUB_SHA%" > %ARTIFACTS%\README.nightly.txt
     - uses: actions/upload-artifact@master
       with:
         name: nightly-windows
