Windows nightly - avoid double quotes in README.nightly.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -67,7 +67,7 @@ jobs:
           ren %ARTIFACTS%\pandoc pandoc-%SUFFIX%
           ren %ARTIFACTS%\pandoc-citeproc pandoc-citeproc-%SUFFIX%
           ren %ARTIFACTS%\COPYRIGHT COPYRIGHT.txt
-          echo "Built from %GITHUB_SHA%" > %ARTIFACTS%\README.nightly.txt
+          echo Built from %GITHUB_SHA% > %ARTIFACTS%\README.nightly.txt
     - uses: actions/upload-artifact@master
       with:
         name: nightly-windows
