nightlies - more windows diagnostics.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -60,7 +60,7 @@ jobs:
           set ARTIFACTS=nightly-windows\pandoc-nightly-windows-%THEDATE%
           mkdir %ARTIFACTS%
           stack build pandoc pandoc-citeproc
-          forfiles /P .\.stack-work\install /M pandoc*.exe /S /C "cmd /C copy @path %ARTIFACTS%"
+          forfiles /P .\.stack-work\install /M pandoc*.exe /S /C "cmd /C echo @path && echo %ARTIFACTS% && copy @path %ARTIFACTS%"
           copy COPYRIGHT %ARTIFACTS%
           ren %ARTIFACTS%\COPYRIGHT COPYRIGHT.txt
           dir %ARTIFACTS%
