Actions ci - trigger on pull_request as well as push.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,6 @@
 name: CI tests
 
-on: [push]
-#   push:
+on: [push, pull_request]
 #       paths:
 #       - '*'
 #       - '.github/workflows/haskell.yml'
