--- a/stack.yaml
+++ b/stack.yaml
@@ -14,8 +14,6 @@ extra-deps:
 # - pandoc-citeproc-0.16.2
 - git: https://github.com/jgm/pandoc-citeproc
   commit: 63498fb22ae6f394f19f6d62312350b566c4aebd
-- git: https://github.com/jgm/doctemplates
-  commit: 37ac859e3c88493ac62ce5f9e32a943d37529b98
 - pandoc-types-1.17.6
 - ipynb-0.1
 - cmark-gfm-0.2.0
@@ -26,7 +24,7 @@ extra-deps:
 - skylighting-0.8.2
 - doclayout-0.1
 - HsYAML-0.2.0.0
-#- doctemplates-0.6
+- doctemplates-0.6.1
 ghc-options:
    "$locals": -fhide-source-paths -Wno-missing-home-modules
 resolver: lts-13.17
