Use pandoc-types 1.17.6.1

--- a/stack.yaml
+++ b/stack.yaml
@@ -14,6 +14,7 @@ extra-deps:
 # - pandoc-citeproc-0.16.2
 - git: https://github.com/jgm/pandoc-citeproc
   commit: 860788f105cc9b3fec2ab062d993b7aebd68c9c0
+- pandoc-types-1.17.6.1
 - doclayout-0.1
 - HsYAML-0.2.0.0
 - HsYAML-aeson-0.2.0.0
