GitHub ci - back to using ignore-paths.
paths with ! doesn't seem to do it.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,37 +5,35 @@ on:
     branches:
     - '*'
     - '!rc/*'
-    paths:
-    - '*'
-    - '!doc/**'
-    - '!MANUAL.txt'
-    - '!*.md'
-    - '!RELEASE_CHECKLIST'
-    - '!BUGS'
-    - '!changelog'
-    - '!README.template'
-    - '!appveyor.yml'
-    - '!tools/**'
-    - '!linux/**'
-    - '!macos/**'
-    - '!windows/**'
-    - '!man/**'
+    ignore-paths:
+    - 'doc/**'
+    - 'MANUAL.txt'
+    - '*.md'
+    - 'RELEASE_CHECKLIST'
+    - 'BUGS'
+    - 'changelog'
+    - 'README.template'
+    - 'appveyor.yml'
+    - 'tools/**'
+    - 'linux/**'
+    - 'macos/**'
+    - 'windows/**'
+    - 'man/**'
   pull_request:
-    paths:
-    - '*'
-    - '!doc/**'
-    - '!MANUAL.txt'
-    - '!*.md'
-    - '!RELEASE_CHECKLIST'
-    - '!BUGS'
-    - '!changelog'
-    - '!README.template'
-    - '!appveyor.yml'
-    - '!tools/**'
-    - '!linux/**'
-    - '!macos/**'
-    - '!windows/**'
-    - '!man/**'
+    ignore-paths:
+    - 'doc/**'
+    - 'MANUAL.txt'
+    - '*.md'
+    - 'RELEASE_CHECKLIST'
+    - 'BUGS'
+    - 'changelog'
+    - 'README.template'
+    - 'appveyor.yml'
+    - 'tools/**'
+    - 'linux/**'
+    - 'macos/**'
+    - 'windows/**'
+    - 'man/**'
 
 jobs:
   linux:
